# longform-symbolic-music-generation

./: pyproject.toml
src/: dataloader.py  g.py  modeling.py  train_transformer.py  transformer.py  utils.py  vae.py
