[project]
name = "longform-symbolic-music-generation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.5.6",
    "scikit-learn>=1.7.2",
    "symusic>=0.5.9",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "wandb>=0.23.0",
]
